# Handel-Releases

./: .gitignore  CHANGELOG  CMakeLists.txt  README.linux.md  README.linux.txt  README.md  README.txt  build.bat  build.sh  main.scons  requirements.txt
build_helpers/: logic.py  version.py
cmake/functions/: BuildUtilities.cmake  GitVersion.cmake
cmake/modules/: FindBroadcomAPI.cmake  FindVisualLeakDetector.cmake  Findsigntool.cmake
cmake/templates/: handel.rc.in  xia_version.h.in
docs/: acq_values.html  board_operations.html  genindex.html  index.html  introduction.html  legal.html  mapping.html  mca.html  objects.inv  run_data.html  search.html  searchindex.js
docs/_sources/: board_operations.txt  index.txt  legal.txt  mapping.txt  run_data.txt
docs/xmap_quick_start_guide/: acq_values.html  board_operations.html  genindex.html  index.html  introduction.html  legal.html  mapping.html  mca.html  objects.inv  run_data.html  search.html  searchindex.js
examples/: CMakeLists.txt  build.scons
examples/dotnet/: HandelWrap.DllImport.cs
examples/generic/: CMakeLists.txt  handel-error_code.c  handel-gap_time.c  handel-multi_module.c  handel-preset_run.c  handel-sca.c  infinite_read_loops.c
examples/mercury/: CMakeLists.txt  hqsg-mercury-oem.c
examples/microdxp/: CMakeLists.txt  hqsg-microdxp-passthrough.c  hqsg-microdxp-snapshot.c  hqsg-microdxp-vega.c  hqsg-microdxp.c  hqsg-udxp.c  microdxp_std.ini  microdxp_usb2.ini  udxp_usb2.ini
examples/microdxp/microdxp-shell/: .gitignore  README.md  microdxp.py  microdxp_shell.py  usb_serial_command.py  utils.py
examples/microdxp/microdxp-shell/ini/: template.ini
examples/microdxp/microdxp-shell/libs/: README.md
examples/saturn/: CMakeLists.txt  hqsg-saturn.c  saturn.ini  saturn_reset_epp.ini
examples/stj/: CMakeLists.txt  hqsg-stj-buffers.h  hqsg-stj-list.c
examples/xMAP/: CMakeLists.txt  hqsg-xmap-mapping.c  hqsg-xmap-preset.c  hqsg-xmap.c
firmware/: README.md
firmware/saturn/: saturn_rc_revc_40mhz.fdd  saturn_rc_revc_40mhz_roi.fdd  saturn_reset_revc.fdd  saturn_reset_revc_40mhz.fdd  saturn_reset_revc_40mhz_roi.fdd  saturn_reset_revc_roi.fdd
inc/: CMakeLists.txt  Dlldefs.h  Plx.h  camac_errors.h  camacapi.h  camacdll.h  camacso.h  dxp4c2x.h  epplib.h  fdd.h  fdddef.h  handel.h  handel_constants.h  handel_errors.h  handel_file.h  handel_generic.h  handel_log.h  handel_xerxes.h  handeldef.h  md_generic.h  md_linux.h  md_log.h  md_shim.h  md_threads.h  md_vxworks.h  md_win32.h  mercury.h  plxlib.h  plxlib_errors.h  plxlibapi.h  psl.h  psl_common.h  psl_dxp4c2x.h  psl_mercury.h  psl_saturn.h  psl_stj.h  psl_udxp.h  psl_udxp_alpha.h  psl_xmap.h  psldef.h  (+51 more)
inc/util/: xia_ary_manip.h  xia_compare.h  xia_crc.h  xia_sleep.h  xia_str_manip.h
lib/: PlxApi.lib
lib/x64/: plxapi.lib
readme/: README.linux.txt  README.txt
src/: CMakeLists.txt  build.scons  camacso.c  dxp4c2x.c  dxp4c2x_psl.c  fdd.c  handel.c  handel_dbg.c  handel_detchan.c  handel_dyn_default.c  handel_dyn_detector.c  handel_dyn_firmware.c  handel_dyn_module.c  handel_error.c  handel_file.c  handel_log.c  handel_mem.c  handel_run_control.c  handel_run_params.c  handel_sort.c  handel_system.c  handel_xerxes.c  main.scons  md_linux.c  md_log.c  md_vxWorks.c  md_win32.c  mercury.c  mercury_psl.c  psl.c  saturn.c  saturn_psl.c  stj.c  stj_psl.c  udxp.c  udxp_common.c  udxp_psl.c  xerxes.c  xerxes_io.c  xerxes_log.c  (+13 more)
src/devices/mercury/: CMakeLists.txt  mercury.c  mercury_psl.c
src/devices/saturn/: CMakeLists.txt  saturn.c  saturn_psl.c
src/devices/stj/: CMakeLists.txt  stj.c  stj_psl.c
src/devices/udxp/: CMakeLists.txt  udxp.c  udxp_common.c  udxp_psl.c
src/devices/xmap/: CMakeLists.txt  xmap.c  xmap_psl.c
src/handel/: CMakeLists.txt  handel.c  handel_detchan.c  handel_dyn_default.c  handel_dyn_detector.c  handel_dyn_firmware.c  handel_dyn_module.c  handel_error.c  handel_file.c  handel_log.c  handel_run_control.c  handel_run_params.c  handel_sort.c  handel_system.c  handel_xerxes.c
src/md/: CMakeLists.txt  md_linux.c  md_log.c  md_threads_posix.c  md_threads_windows.c  md_win32.c
src/protocols/epp/: CMakeLists.txt  xia_epp_linux.c
src/protocols/plx/: CMakeLists.txt  xia_plx.c
src/protocols/serial/: CMakeLists.txt  xia_serial.c
src/protocols/usb/: CMakeLists.txt  xia_usb.c
src/protocols/usb2/: CMakeLists.txt  xia_usb2.c  xia_usb_linux.c
src/utils/: CMakeLists.txt  xia_assert.c  xia_file.c
src/xerxes/: CMakeLists.txt  xerxes.c  xerxes_io.c
src/xup/: CMakeLists.txt  xup.c  xup_writer.c
swtoolkit/: README.software_construction_toolkit  hammer.sh
swtoolkit/lib/: TestFramework.py
swtoolkit/site_scons/: http_download.py  pulse_latest.py  (+3 more)
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/plx/: CMakeLists.txt  burst_read.c  max_read.c  single_burst_full_mem.c
tests/benchmarks/plx/results/: r1981.txt  r1982.txt
tests/benchmarks/saturn/: CMakeLists.txt  change_pt_same_decimation.c  multi_timing.c  peaking_time_change.c  siint_disconnect_mem_leak.c  siint_memory_leak.c  transfer_speeds.c
tests/benchmarks/usb2/: CMakeLists.txt  multi_timing.c  speed_curve.c  transfer_speeds.c
tests/benchmarks/xmap/: CMakeLists.txt
tests/benchmarks/xmap/mapping/: CMakeLists.txt  main.c
tests/benchmarks/xmap/mca_read/: CMakeLists.txt  mca_read.c  mca_read_module.c  runner.rb  single_read.c
tests/benchmarks/xmap/start_system/: CMakeLists.txt  start_system.c
tests/integration/: CMakeLists.txt
tests/integration/inc/: test_helpers.h
tests/integration/src/: test_api.c  test_basic_memory.c  test_calibration.c  test_file_handle.c  test_memory_leaks.c  test_preset_run_data.c
tests/product/microdxp/: CMakeLists.txt
tests/product/microdxp/src/: test_mdxp_usb2.c  test_microdxp_api.c  test_microdxp_usb.c
tests/product/xmap/: CMakeLists.txt
tests/product/xmap/src/: test_full_buffers.c  test_list-mode_read.c  test_state_machine_stress.c
tests/unit/: CMakeLists.txt
tests/unit/helpers/: microdxp_usb.ini  unix.ini
tests/unit/inc/: test_utils.h
tests/unit/src/: test_handel.c  test_microdxp.c  test_utils.c
(+47 files in other folders)
